--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,37 @@
 [project]
-name = "fast-zero"
+name = "fast_zero"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Augusto-logo",email = "augusto2.logo@gmail.com"}
+    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13, <4.0"
+requires-python = ">=3.11,<4.0"
 dependencies = [
-    "fastapi[standard] (>=0.115.12,<0.116.0)",
-    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)",
     "alembic (>=1.16.1,<2.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)",
-    "tzdata (>=2025.2,<2026.0)",
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
     "pwdlib[argon2] (>=0.2.1,<0.3.0)",
-    "aiosqlite (==0.17.0,<0.22.0)",
-    "psycopg[binary] (>=3.2.9,<4.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
+    "psycopg[binary] (>=3.2.9,<4.0.0)",
+    "tzdata (>=2025.2,<2026.0)"
 ]
-
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 taskipy = "^1.14.1"
 ruff = "^0.11.11"
+httpx = "^0.28.1"
 pytest-asyncio = "^1.0.0"
 factory-boy = "^3.3.3"
 freezegun = "^1.5.2"
+testcontainers = "^4.10.0"
 
 [tool.ruff]
-line-length = 195
+line-length = 79
 extend-exclude = ['migrations']
 
 [tool.ruff.lint]
@@ -50,6 +47,9 @@ pythonpath = "."
 addopts = '-p no:warnings'
 asyncio_default_fixture_loop_scope = 'function'
 
+[tool.coverage.run]
+concurrency = ["thread", "greenlet"]
+
 [tool.taskipy.tasks]
 lint = 'ruff check'
 pre_format = 'ruff check --fix'
@@ -58,3 +58,7 @@ run = 'fastapi dev fast_zero/app.py'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=fast_zero -vv'
 post_test = 'coverage html'
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
